[gd_scene load_steps=5 format=3 uid="uid://r2fsp6nqqrig"]

[ext_resource type="Script" path="res://Feature.gd" id="1_qesbp"]
[ext_resource type="Texture2D" uid="uid://dqwpfhmo1eh88" path="res://Assets/UI/Divider.svg" id="2_ldgu0"]
[ext_resource type="Texture2D" uid="uid://dctd3qs435f6c" path="res://Assets/UI/PlusIcon.svg" id="5_upf7y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p5ccu"]

[node name="Feature" type="GraphNode" groups=["FEATURE", "graph_nodes"]]
offset_right = 180.0
offset_bottom = 120.0
mouse_default_cursor_shape = 6
title = "NodeTitle"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color(1, 1, 1, 1)
slot/5/left_icon = null
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color(1, 1, 1, 1)
slot/5/right_icon = null
slot/5/draw_stylebox = true
slot/6/left_enabled = false
slot/6/left_type = 0
slot/6/left_color = Color(1, 1, 1, 1)
slot/6/left_icon = null
slot/6/right_enabled = false
slot/6/right_type = 0
slot/6/right_color = Color(1, 1, 1, 1)
slot/6/right_icon = null
slot/6/draw_stylebox = true
slot/7/left_enabled = false
slot/7/left_type = 0
slot/7/left_color = Color(1, 1, 1, 1)
slot/7/left_icon = null
slot/7/right_enabled = false
slot/7/right_type = 0
slot/7/right_color = Color(1, 1, 1, 1)
slot/7/right_icon = null
slot/7/draw_stylebox = true
slot/8/left_enabled = false
slot/8/left_type = 0
slot/8/left_color = Color(1, 1, 1, 1)
slot/8/left_icon = null
slot/8/right_enabled = false
slot/8/right_type = 0
slot/8/right_color = Color(1, 1, 1, 1)
slot/8/right_icon = null
slot/8/draw_stylebox = true
script = ExtResource("1_qesbp")
metadata/_edit_use_anchors_ = true

[node name="Feature" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Feature"]
layout_mode = 2
text = "Select feature"

[node name="OptionButton" type="OptionButton" parent="Feature"]
layout_mode = 2
item_count = 8
popup/item_0/text = "Set Var (T/F)"
popup/item_0/id = 0
popup/item_1/text = "Emit Signal"
popup/item_1/id = 1
popup/item_2/text = "If Bool"
popup/item_2/id = 2
popup/item_3/text = "If Greater"
popup/item_3/id = 3
popup/item_4/text = "If Less"
popup/item_4/id = 4
popup/item_5/text = "If Equals"
popup/item_5/id = 5
popup/item_6/text = "Has Garment"
popup/item_6/id = 6
popup/item_7/text = "Set Person"
popup/item_7/id = 7

[node name="VariablesGroup" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Divider" type="TextureRect" parent="VariablesGroup"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ldgu0")
stretch_mode = 2

[node name="Title" type="HBoxContainer" parent="VariablesGroup"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Label" type="Label" parent="VariablesGroup/Title"]
layout_mode = 2
text = "Set Variables"

[node name="AddVarButton" type="Button" parent="VariablesGroup/Title"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_p5ccu")
icon = ExtResource("5_upf7y")

[node name="EmitSignalGroup" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Divider" type="TextureRect" parent="EmitSignalGroup"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ldgu0")
stretch_mode = 2

[node name="Title" type="HBoxContainer" parent="EmitSignalGroup"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Label" type="Label" parent="EmitSignalGroup/Title"]
layout_mode = 2
text = "Emit Signal"

[node name="AddSignalButton" type="Button" parent="EmitSignalGroup/Title"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_p5ccu")
icon = ExtResource("5_upf7y")

[node name="ConditionalsGroup" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Divider" type="TextureRect" parent="ConditionalsGroup"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ldgu0")
stretch_mode = 2

[node name="Title" type="HBoxContainer" parent="ConditionalsGroup"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Label" type="Label" parent="ConditionalsGroup/Title"]
layout_mode = 2
text = "IF (Boolean)"

[node name="AddConditionalButton" type="Button" parent="ConditionalsGroup/Title"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_p5ccu")
icon = ExtResource("5_upf7y")

[node name="GreaterGroup" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Divider" type="TextureRect" parent="GreaterGroup"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ldgu0")
stretch_mode = 2

[node name="Title" type="HBoxContainer" parent="GreaterGroup"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Label" type="Label" parent="GreaterGroup/Title"]
layout_mode = 2
text = "IF (Greater)"

[node name="AddGreaterButton" type="Button" parent="GreaterGroup/Title"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_p5ccu")
icon = ExtResource("5_upf7y")

[node name="LessGroup" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Divider" type="TextureRect" parent="LessGroup"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ldgu0")
stretch_mode = 2

[node name="Title" type="HBoxContainer" parent="LessGroup"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Label" type="Label" parent="LessGroup/Title"]
layout_mode = 2
text = "IF (Less)"

[node name="AddLessButton" type="Button" parent="LessGroup/Title"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_p5ccu")
icon = ExtResource("5_upf7y")

[node name="EqualGroup" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Divider" type="TextureRect" parent="EqualGroup"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ldgu0")
stretch_mode = 2

[node name="Title" type="HBoxContainer" parent="EqualGroup"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Label" type="Label" parent="EqualGroup/Title"]
layout_mode = 2
text = "IF (Equals)"

[node name="AddEqualButton" type="Button" parent="EqualGroup/Title"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_p5ccu")
icon = ExtResource("5_upf7y")

[node name="HasGarmentGroup" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Divider" type="TextureRect" parent="HasGarmentGroup"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ldgu0")
stretch_mode = 2

[node name="Title" type="HBoxContainer" parent="HasGarmentGroup"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Label" type="Label" parent="HasGarmentGroup/Title"]
layout_mode = 2
text = "has_garment()"

[node name="AddGarmentButton" type="Button" parent="HasGarmentGroup/Title"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_p5ccu")
icon = ExtResource("5_upf7y")

[node name="SetPersonGroup" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Divider" type="TextureRect" parent="SetPersonGroup"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ldgu0")
stretch_mode = 2

[node name="Person1Label" type="Label" parent="SetPersonGroup"]
layout_mode = 2
text = "'Main' Person:"

[node name="MainPersonID" type="LineEdit" parent="SetPersonGroup"]
layout_mode = 2

[node name="Person2Label" type="Label" parent="SetPersonGroup"]
layout_mode = 2
text = "'Second' Person:"

[node name="SecondPersonID" type="LineEdit" parent="SetPersonGroup"]
layout_mode = 2

[connection signal="_cancel_button_pressed" from="." to="." method="_on_cancel_button_pressed"]
[connection signal="close_request" from="." to="." method="_on_close_request"]
[connection signal="dragged" from="." to="." method="_on_dragged"]
[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="item_selected" from="Feature/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="VariablesGroup/Title/AddVarButton" to="." method="_on_add_button_pressed" binds= ["variable"]]
[connection signal="pressed" from="EmitSignalGroup/Title/AddSignalButton" to="." method="_on_add_button_pressed" binds= ["signal"]]
[connection signal="pressed" from="ConditionalsGroup/Title/AddConditionalButton" to="." method="_on_add_button_pressed" binds= ["conditional"]]
[connection signal="pressed" from="GreaterGroup/Title/AddGreaterButton" to="." method="_on_add_button_pressed" binds= ["greater"]]
[connection signal="pressed" from="LessGroup/Title/AddLessButton" to="." method="_on_add_button_pressed" binds= ["less"]]
[connection signal="pressed" from="EqualGroup/Title/AddEqualButton" to="." method="_on_add_button_pressed" binds= ["equal"]]
[connection signal="pressed" from="HasGarmentGroup/Title/AddGarmentButton" to="." method="_on_add_button_pressed" binds= ["has_garment"]]
